- removed the context parameter from the ArrayCircleOverlay ArrayItemizedOverlay constructors (was no longer needed) - fixed many PMD warnings
git-svn-id: http://mapsforge.googlecode.com/svn/trunk@1254 a424f762-2dd8-11df-bfeb-7b4c664f286a